# uwgit

./: .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  build.rs  config.toml.example  docker-compose.yml
src/: config.rs  format.rs  highlight.rs  main.rs  templates.rs
src/git/: commits.rs  diff.rs  mod.rs  object.rs  refs.rs  repos.rs  tree.rs
src/handlers/: archive.rs  blob.rs  commit.rs  errors.rs  log.rs  mod.rs  refs.rs  repo.rs  tree.rs  util.rs
static/: font.css  style.css
static/js/: commit.js
templates/: base.html  blob.html  commit.html  error.html  index.html  log.html  refs.html  repos.html  tree.html
templates/partials/: breadcrumb_path.html  code_viewer.html  commit_diff_body.html  nav.html  pager.html
