[package]
name = "uwgit"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1"
anyhow = "1.0"
askama = "0.12"
axum = "0.8"
dotenvy = "0.15"
git2 = "0.19"
moka = { version = "0.12", features = ["sync"] }
pulldown-cmark = "0.10"
serde = { version = "1.0", features = ["derive"] }
syntect = "5.2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }

[build-dependencies]
sha2 = "0.10"
